--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Juliawang';
-    src: url("./fonts/Juliawang-Regular.ttf") format('truetype'); 
+    src: url("./fonts/Juliawang-Regular.ttf") format('truetype');
 }
 
 body {
@@ -117,7 +117,7 @@ ol {
 
 .control-tab {
     margin: 2rem 3rem;
-    
+
     position: absolute;
     z-index: 101;
     top: 0;
@@ -151,9 +151,10 @@ ol {
 .toolbar {
     position: absolute;
     bottom: 0;
-    width: 300px;
+    width: 400px;
     z-index: 11;
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
@@ -172,7 +173,104 @@ ol {
     left: 0;
 }
 
+/* Input styling */
+input[type=range] {
+    height: 29px;
+    margin-top: 20px;
+    appearance: none;
+}
 
+input[type=range]:focus {
+    outline: none;
+}
 
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 6px;
+    cursor: pointer;
+    animation: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #000000;
+    border-radius: 19px;
+    border: 0px solid #000000;
+}
 
+input[type=range]::-webkit-slider-thumb {
+    box-shadow: 0px 0px 0px #000000;
+    border: 0px solid #000000;
+    height: 23px;
+    width: 23px;
+    border-radius: 27px;
+    background: #000000;
+    cursor: pointer;
+    appearance: none;
+    margin-top: -8.5px;
+}
 
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #000000;
+}
+
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 6px;
+    cursor: pointer;
+    animation: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #000000;
+    border-radius: 19px;
+    border: 0px solid #000000;
+}
+
+input[type=range]::-moz-range-thumb {
+    box-shadow: 0px 0px 0px #000000;
+    border: 0px solid #000000;
+    height: 23px;
+    width: 23px;
+    border-radius: 27px;
+    background: #000000;
+    cursor: pointer;
+}
+
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 6px;
+    cursor: pointer;
+    animation: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+
+input[type=range]::-ms-fill-lower {
+    background: #000000;
+    border: 0px solid #000000;
+    border-radius: 38px;
+    box-shadow: 0px 0px 0px #000000;
+}
+
+input[type=range]::-ms-fill-upper {
+    background: #000000;
+    border: 0px solid #000000;
+    border-radius: 38px;
+    box-shadow: 0px 0px 0px #000000;
+}
+
+input[type=range]::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 0px 0px 0px #000000;
+    border: 0px solid #000000;
+    height: 23px;
+    width: 23px;
+    border-radius: 27px;
+    background: #000000;
+    cursor: pointer;
+}
+
+input[type=range]:focus::-ms-fill-lower {
+    background: #000000;
+}
+
+input[type=range]:focus::-ms-fill-upper {
+    background: #000000;
+}
