--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ ol {
 .toolbar {
     position: absolute;
     bottom: 0;
-    width: 400px;
+    width: 300px;
     z-index: 11;
     display: flex;
     align-items: center;
@@ -174,10 +174,18 @@ ol {
 }
 
 /* Input styling */
+.brushsize-container {
+    position: absolute;
+    left: -20px;
+    transform: rotate(270deg);
+    z-index: 100;
+}
+
 input[type=range] {
-    height: 29px;
-    margin-top: 20px;
+    height: 27px;
     appearance: none;
+    margin: 10px 0;
+    width: 100%;
 }
 
 input[type=range]:focus {
@@ -186,21 +194,21 @@ input[type=range]:focus {
 
 input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
-    height: 6px;
+    height: 4px;
     cursor: pointer;
     animation: 0.2s;
     box-shadow: 0px 0px 0px #000000;
     background: #000000;
-    border-radius: 19px;
+    border-radius: 26px;
     border: 0px solid #000000;
 }
 
 input[type=range]::-webkit-slider-thumb {
     box-shadow: 0px 0px 0px #000000;
     border: 0px solid #000000;
-    height: 23px;
-    width: 23px;
-    border-radius: 27px;
+    height: 21px;
+    width: 21px;
+    border-radius: 25px;
     background: #000000;
     cursor: pointer;
     appearance: none;
@@ -213,28 +221,28 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 
 input[type=range]::-moz-range-track {
     width: 100%;
-    height: 6px;
+    height: 4px;
     cursor: pointer;
     animation: 0.2s;
     box-shadow: 0px 0px 0px #000000;
     background: #000000;
-    border-radius: 19px;
+    border-radius: 26px;
     border: 0px solid #000000;
 }
 
 input[type=range]::-moz-range-thumb {
     box-shadow: 0px 0px 0px #000000;
     border: 0px solid #000000;
-    height: 23px;
-    width: 23px;
-    border-radius: 27px;
+    height: 21px;
+    width: 21px;
+    border-radius: 25px;
     background: #000000;
     cursor: pointer;
 }
 
 input[type=range]::-ms-track {
     width: 100%;
-    height: 6px;
+    height: 4px;
     cursor: pointer;
     animation: 0.2s;
     background: transparent;
@@ -245,14 +253,14 @@ input[type=range]::-ms-track {
 input[type=range]::-ms-fill-lower {
     background: #000000;
     border: 0px solid #000000;
-    border-radius: 38px;
+    border-radius: 52px;
     box-shadow: 0px 0px 0px #000000;
 }
 
 input[type=range]::-ms-fill-upper {
     background: #000000;
     border: 0px solid #000000;
-    border-radius: 38px;
+    border-radius: 52px;
     box-shadow: 0px 0px 0px #000000;
 }
 
@@ -260,9 +268,9 @@ input[type=range]::-ms-thumb {
     margin-top: 1px;
     box-shadow: 0px 0px 0px #000000;
     border: 0px solid #000000;
-    height: 23px;
-    width: 23px;
-    border-radius: 27px;
+    height: 21px;
+    width: 21px;
+    border-radius: 25px;
     background: #000000;
     cursor: pointer;
 }
